# FlowyRouter

./: .gitignore  Cargo.toml  Makefile  README.md  prd.md
crates/cli/: Cargo.toml
crates/cli/src/: client.rs  config.rs  daemon_ctl.rs  env_cmd.rs  main.rs  stats_cmd.rs
crates/cli/tests/: gateway_cli.rs
crates/config/: Cargo.toml
crates/config/src/: file.rs  paths.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: config.rs  daemon.rs  error.rs  lib.rs  logging.rs  server.rs
crates/gateway/src/api/: admin.rs  auth.rs  chat.rs  meta.rs  mod.rs  openai.rs  routes.rs
crates/gateway/src/experience/: data.rs  mod.rs  outcome.rs  store.rs  tests.rs
crates/gateway/src/routing/: conversation.rs  decision.rs  difficulty.rs  gates.rs  mod.rs  policy.rs  signals.rs  step_kind.rs  tests.rs  upstream_availability.rs
crates/gateway/src/session/: data.rs  store.rs  tests.rs
crates/gateway/src/stats/: data.rs  mod.rs
crates/gateway/src/upstream/: forward.rs  mod.rs  sse.rs
example/: README.md  config.economy.toml  config.edge-only.toml  config.minimal.toml  config.toml
example/electron/: main.mjs  package-lock.json  package.json
ffi/: flowy_router.h
src/: cli_settings.rs  client.rs  daemon_ctl.rs  embedded.rs  env_cmd.rs  ffi.rs  lib.rs  main.rs  setup_cmd.rs  stats_cmd.rs
src/config/: file.rs  mod.rs  setup.rs
src/gateway/: config.rs  config_manager.rs  daemon.rs  edge_load.rs  logging.rs  mod.rs  server.rs
src/gateway/api/: admin.rs  auth.rs  chat.rs  meta.rs  mod.rs  openai.rs  routes.rs  setup.rs
src/gateway/experience/: data.rs  mod.rs  outcome.rs  store.rs  tests.rs
src/gateway/multimodal/: data.rs  fingerprint.rs  mod.rs  store.rs
src/gateway/routing/: adaptive.rs  adaptive_tuner.rs  conversation.rs  decision.rs  difficulty.rs  edge_busy.rs  gates.rs  mod.rs  policy.rs  signals.rs  step_kind.rs  tests.rs  upstream_availability.rs  work.rs
src/gateway/session/: data.rs  mod.rs  store.rs  tests.rs
src/gateway/stats/: data.rs  metrics.rs  mod.rs
src/gateway/upstream/: forward.rs  mod.rs  sse.rs  verify.rs
tests/: gateway_cli.rs
