[package]
name = "flowy-router"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Flowy Router — edge/cloud LLM routing gateway and CLI"

[lib]
name = "flowy_router"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib", "staticlib"]

[[bin]]
name = "flowy-router"
path = "src/main.rs"

[dependencies]
anyhow = "1"
async-stream = "0.3"
axum = { version = "0.8", features = ["json"] }
bytes = "1"
clap = { version = "4", features = ["derive"] }
dirs = "6"
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
toml = "0.8"
dialoguer = { version = "0.11", default-features = false, features = ["password"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
uuid = { version = "1", features = ["v4"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tokio-test = "0.4"

[[test]]
name = "gateway_cli"
path = "tests/gateway_cli.rs"
harness = true
