[package]
name = "flowy-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI client for the Flowy Router gateway daemon"

[[bin]]
name = "flowy"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
flowy-config = { path = "../config" }
flowy-gateway = { path = "../gateway" }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "signal", "time"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[[test]]
name = "gateway_cli"
harness = true
