[package]
name = "flowy-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Flowy Router gateway daemon — edge/cloud LLM routing for agents"

[lib]
name = "flowy_gateway"
path = "src/lib.rs"

[[bin]]
name = "flowy-gateway"
path = "src/bin/flowy-gateway.rs"

[dependencies]
anyhow = "1"
flowy-config = { path = "../config" }
async-stream = "0.3"
clap = { version = "4", features = ["derive"] }
axum = { version = "0.8", features = ["json"] }
bytes = "1"
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
uuid = { version = "1", features = ["v4"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tokio-test = "0.4"
